Example: fix overflow

--- a/src/stories/global.css
+++ b/src/stories/global.css
@@ -42,6 +42,10 @@ button {
 	animation: action-in 3s both;
 }
 
+.example-button-action-wrapper {
+	overflow: hidden;
+}
+
 .example-button {
 	align-items: center;
 	background-color: #FFFFFF;
